--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,11 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    
+    <color name="platinum">#D9D7DE</color>
+    <color name="seasalt">#F9F9F9</color>
+
+    <color name="blue">#00abe7</color>
+    <color name="gray">#cfdbd5</color>
+    <color name="blue_dark">#039BE5</color>
 </resources>
